# project-kda-kelompok3

./: .env.example  .gitignore  CARA_RUNNING.md  DASHBOARD_REALTIME.md  README.md  dashboard.py  dashboard_backup.py  encryption.ipynb  generator_instance.py  git_check_before_push.bat  git_clean_restart.bat  git_push_clean.bat  load-env.ps1  main.py  modeltrain.ipynb  preprocessing.py  pyproject.toml  requirements.txt  smart_grid_security_dataset.csv  template_smartgrid_security.py  test_sender.py
autogenerate/: ML.py  README.md  TUTORIAL.md  auto_generate.py  encrypt.py  requirements.txt  smart_grid_data_v2.csv  test_drift_system.py  test_training.py
autogenerate/.keys/: private_key.pem  public_key.pem
data/: df_test_lengkap.csv  df_train.csv  smart_grid_security_dataset.csv
data/processed/: ensemble_result_for_friend.csv  test_data.csv  test_predictions.csv  test_predictions_with_ensemble.csv  test_scaled.csv  train_data.csv  train_scaled.csv  voltage_processed.csv
data/raw/: iot_anomaly.csv  iot_normal.csv  smart_grid_security_dataset.csv  voltage_anomaly.csv  voltage_normal.csv
hasil/: hasil_prediksi_drift.csv  iteration_metrics.csv  model_summary.csv  server.py  test_predictions.csv
models/: feature_columns.pkl  scaler.pkl
notebook/: ManualHardVorting.ipynb  TemplatePipelinePrediksi.ipynb  modeltrain.ipynb
outputs/: ensemble_classification_report.txt  ensemble_confusion_matrix.csv  evaluation_data_with_predictions.csv  performance_metrics_result.csv
src/: template_pipeline_prediksi_ensemble.py  templatemodel.py
tests/: test_sender.py
(+14 files in other folders)
