[project]
name = "tugas-besar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "flask-cors>=4.0",
    "matplotlib>=3.10.9",
    "numpy>=1.24",
    "pandas>=3.0.2",
    "pyngrok>=7.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]
